# regressor-guided-image-editing

./: .gitignore  ClfWrapper.py  InversionResamplingStableDiffusionPipeline.py  InversionResamplingStableDiffusionXLPipeline.py  LICENSE  README.md  adapt_images.py  emotion_adaption.def  pyproject.toml  train_guidance_clf.py
analysis/: ListDataset.py  scale_single_image.py  statistical_analysis.py
baselines/: optimize_image_imaginaire.py  optimize_image_param.py  utils.py
baselines/datasets/: InstagramDataset.py
baselines/image_transformations/: image_transformations.py
baselines/losses/: EmotionImageLoss.py
baselines/models/: EmotionPredictionModel.py
data/annotations/: captions.json
guidance_classifier/: GuidanceClassifier.py  MiduClassifier.py  ValenceArousalMidu.py
models/: clf_new_params_midu_va_512_2024_07_11_09_10_03  imaginaire_munit_200000_s5.pt
src/: adapt_images.py  optimize_image_imaginaire.py  optimize_image_param.py  paths.py
src/adapt_images/: adapter.py  config.py  output.py  scoring.py
src/analysis/: classifier_score_of_images.py  image_comparison.py  low_level_image_metrics.py  predict_valence_arousal.py  process_result_images.py
src/baselines/: optimize_image.py  run_img_trans.py  utils.py
src/baselines/image_transformations/: color_transformations.py  image_transformations.py  img_trans_torch_diff.py
src/baselines/losses/: CompoundEmotionLoss.py  CompoundEmotionVector.py  ValenceArousalLoss.py
src/baselines/models/: Discriminator.py  EmoNet.py  EmotionPredictionModel.py
src/baselines/models/utilities/: MeanReplicatedCrops.py  ReplicateAndCrop.py  TransformModule.py
src/clf/: train_guidance_clf.py
src/datasets/: CocoCaptions.py  Dataloader.py  ImageDirectoryDataset.py  LDLDatasetPCLabeled.py  PandasFrameDataset.py
src/guidance_classifier/: MiduClassifier.py  guidance_scores.py
src/models/: clf_best_cont_midu_va_1024_2024_07_22_16_01_14  va_pred_all
src/munit/: imagenet2imagenet.yaml
src/pipelines/: InversionResamplingDiffusionPipeline.py  InversionResamplingStableDiffusionPipeline.py  InversionResamplingStableDiffusionXLPipeline.py  diff_utils.py
