[project]
name = "regressor-guided-image-editing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8,<3.9"
dependencies = [
    "absl-py==2.1.0",
    "accelerate==0.31.0",
    "albucore==0.0.9",
    "albumentations==1.4.8",
    "annotated-types==0.7.0",
    "av==12.1.0",
    "awscli==1.33.7",
    "awscli-plugin-endpoint==0.4",
    "boto3==1.34.125",
    "botocore==1.34.125",
    "cachetools==5.3.3",
    "certifi==2022.12.7",
    "chardet==4.0.0",
    "charset-normalizer==2.1.1",
    "clean-fid==0.1.35",
    "click==8.1.7",
    "cmake==3.29.5",
    "colorama==0.4.6",
    "contourpy==1.1.1",
    "cycler==0.12.1",
    "Cython==3.0.10",
    "diffusers==0.29.0",
    "diskcache==5.6.3",
    "dlib==19.24.4",
    "docker-pycreds==0.4.0",
    "docutils==0.16",
    "face-alignment==1.4.1",
    "filelock==3.15.1",
    "fonttools==4.53.0",
    "fsspec==2024.6.0",
    "ftfy==6.2.0",
    "GitPython==3.1.43",
    "google-auth==2.30.0",
    "google-auth-oauthlib==1.0.0",
    "grpcio==1.64.1",
    "huggingface-hub==0.23.3",
    "idna==2.10",
    "imageio==2.34.1",
    "imageio-ffmpeg==0.5.1",
    "importlib-metadata==7.1.0",
    "importlib-resources==6.4.0",
    "imutils==0.5.4",
    "jmespath==1.0.1",
    "joblib==1.4.2",
    "kiwisolver==1.4.5",
    "kornia==0.7.2",
    "kornia-rs==0.1.3",
    "lazy-loader==0.4",
    "llvmlite==0.41.1",
    "lmdb==1.4.1",
    "lpips==0.1.4",
    "Markdown==3.6",
    "MarkupSafe==2.1.5",
    "matplotlib==3.7.5",
    "networkx==3.1",
    "numba==0.58.1",
    "numpy>=1.24.1,<1.25.0",
    "nvidia-ml-py3==7.352.0",
    "oauthlib==3.2.2",
    "opencv-contrib-python==4.10.0.82",
    "opencv-python==4.10.0.82",
    "opencv-python-headless==4.10.0.82",
    "packaging==24.1",
    "pandas==2.0.3",
    "pillow==10.3.0",
    "platformdirs==4.2.2",
    "plot-utils>=0.6.14",
    "protobuf==5.27.1",
    "psutil==5.9.8",
    "pyasn1==0.6.0",
    "pyasn1-modules==0.4.0",
    "pydantic==2.7.4",
    "pydantic-core==2.18.4",
    "pyglet==2.0.15",
    "pynvml==11.5.0",
    "pyparsing==3.1.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "PyWavelets==1.4.1",
    "PyYAML==6.0.1",
    "qimage2ndarray==1.10.0",
    "regex==2024.5.15",
    "requests==2.25.1",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==0.10.1",
    "rsa==4.9",
    "s3transfer==0.10.1",
    "safetensors==0.4.3",
    "scikit-image==0.21.0",
    "scikit-learn==1.3.2",
    "scipy==1.10.1",
    "sentry-sdk==2.5.1",
    "setproctitle==1.3.3",
    "six==1.16.0",
    "smmap==5.0.1",
    "tensorboard==2.14.0",
    "tensorboard-data-server==0.7.2",
    "threadpoolctl==3.5.0",
    "tifffile==2023.7.10",
    "timm==1.0.3",
    "tokenizers==0.19.1",
    "tomli==2.0.1",
    "torch==1.13.1+cu116",
    "torch-fidelity==0.3.0",
    "torchvision==0.14.1+cu116",
    "tqdm==4.66.4",
    "transformers==4.41.2",
    "typing-extensions==4.9.0",
    "tzdata==2024.1",
    "urllib3==1.26.13",
    "wandb==0.17.1",
    "wcwidth==0.2.13",
    "werkzeug==3.0.3",
    "wget==3.2",
    "zipp==3.19.2",
]

[[tool.uv.index]]
name = "pytorch-cu116"
url = "https://download.pytorch.org/whl/cu116"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu116" }]
torchvision = [{ index = "pytorch-cu116" }]
clip = { git = "https://github.com/openai/CLIP.git" }